Bring cupcake/donut branch to same point as eclair/froyo branch

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">Superuser</string>
     <string name="app_name_request">Superuser Request</string>
     <string name="app_name_perms">Superuser Permissions</string>
+    <string name="permlab_respond">respond to superuser requests</string>
+    <string name="permdesc_respond">Allows the application to respond to requests for superuser access. Malicious applications grant permissions to apps that the user has not explicitly given permission to.</string>
     <string name="allow">Allow</string>
     <string name="forget">Forget</string>
     <string name="cancel">Cancel</string>
@@ -18,4 +20,12 @@
     <string name="detail_last_accessed">Last Accessed:</string>
     <string name="request_message">The following app is requesting superuser access:</string>
     <string name="request_app_name">App:</string>
+    <string name="preferences">Preferences</string>
+    <string name="preference_category_whitelist_title">Whitelist Preferences</string>
+    <string name="preference_tap_action_title">Tap action</string>
+    <string name="preference_tap_action_summary">Action to perform when an entry is tapped</string>
+    <string name="preference_category_notification_title">Notifications</string>
+    <string name="preference_notification_title">Notification</string>
+    <string name="preference_notification_summary">Show a message in the notification bar when an app is granted SU permissions</string>
+    <string name="notification_text">%s has been granted Superuser permissions</string>
 </resources>
