--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -83,4 +83,10 @@
     <string name="pref_version_title">Superuser v%s</string>
 
     <string name="notification_text">%s recebeu as permissões de Superuser</string>
+    <string name="bluetooth_device_info_alias">Não há histórico</string>
+    <string name="empty_logs">Não há histórico</string>
+    <string name="pref_clear_log">Limpar histórico</string>
+    <string name="pref_version_summary">Versão de banco de dados %s</string>
+    <string name="pref_bin_version_summary">Toque para checar se há atualizações</string>
+    <string name="pref_bin_version_title">Su binário v%s</string>
 </resources>
