Chinese translation: add missing strings and misc fixes
Change-Id: I7fd62ffce9d5feaeb4069fe6a8932cae349b97cf

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2,8 +2,10 @@
 <resources>
     <string name="app_name">授权管理</string>
     <string name="app_name_request">授权请求</string>
+    
     <string name="permlab_respond">响应最高权限请求</string>
     <string name="permdesc_respond">允许应用程序响应最高权限访问请求。</string>
+    
     <string name="new_su">su 的新版本</string>
     <string name="new_su_msg">su 程序有新的版本。点击“确定”来尝试自动安装它。</string>
     <string name="su_updated">su 程序更新成功</string>
@@ -14,6 +16,7 @@
     <string name="no_connection">没有可用的网络连接。无法查找更新</string>
     <string name="manifest_download_failed">查找可用更新失败</string>
     <string name="su_original">原始</string>
+    
     <string name="warning">警告</string>
     <string name="malicious_app_found">发现软件包 %s 申请权限响应最高权限访问请求。它可能是试图在不通知你的情况下授予程序最高权限的恶意程序。建议你立即卸载它。</string>
     <string name="malicious_app_notification_ticker">发现疑似恶意程序</string>
@@ -23,11 +26,11 @@
     <string name="report_msg">你想要将该软件包上报给授权管理的开发人员分析吗？</string>
     <string name="yes">是</string>
     <string name="no">否</string>
-    <string name="report_subject">Possibly malicious app found / 发现疑似恶意程序</string>
-    <string name="report_body">The following package was found to be requesting to respond to Superuser requests.\n发现下列软件包申请响应最高权限访问请求。\n\n - %s\n\nPlease investigate.\n请研究分析。</string>
+    
     <string name="tab_apps">程序</string>
     <string name="tab_log">日志</string>
     <string name="tab_settings">设置</string>
+
     <string name="allow">允许</string>
     <string name="forget">忘记</string>
     <string name="cancel">取消</string>
@@ -36,23 +39,28 @@
     <string name="uid">(uid: %d)</string>
     <string name="request">%1$s 作为 %2$s (uid: %3$d)</string>
     <string name="unknown">未知名称</string>
+
     <string name="allowed">被允许</string>
     <string name="denied">被拒绝</string>
     <string name="created">被创建</string>
     <string name="toggled">被切换</string>
+
     <string name="no_log_data">无日志记录</string>
     <string name="last_allowed">上次允许:</string>
     <string name="last_denied">上次拒绝:</string>
     <string name="empty_apps">无程序条目</string>
     <string name="empty_logs">无日志条目</string>
+
     <string name="detail_package">包名:</string>
     <string name="detail_request">请求 UID:</string>
     <string name="detail_command">命令:</string>
     <string name="detail_status">状态:</string>
     <string name="detail_created">创建于:</string>
     <string name="detail_last_accessed">上次访问:</string>
+
     <string name="request_message">下列程序请求最高权限访问：</string>
     <string name="request_app_name">程序:</string>
+
     <string name="preferences">首选项</string>
     <string name="pref_category_whitelist_title">程序列表</string>
     <string name="pref_tap_action_title">点击时的操作</string>
@@ -78,5 +86,10 @@
     <string name="pref_version_summary">数据库版本 %s</string>
     <string name="pref_bin_version_title">su 程序版本 %s</string>
     <string name="pref_bin_version_summary">点击这里查找更新</string>
+
     <string name="notification_text">%s 已获取最高权限</string>
+
+    <!-- Do not translate -->
+    <string name="report_subject">发现疑似恶意程序</string>
+    <string name="report_body">发现下列软件包申请响应最高权限访问请求。\n\n - %s\n\n请研究分析。</string>
 </resources>
