--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -118,12 +118,18 @@
   <string name="backup_complete">备份保存到 SD 卡</string>
   <string name="pref_restore_title">还原应用程序/首选项</string>
   <string name="restore_complete_prefs_only">Preferences restored</string>
-  <string name="pref_category_info_title">General</string>
+  <string name="pref_category_info_title">常规</string>
   <string name="pref_version_title">授权管理 版本 %1$s (%2$d)</string>
   <string name="pref_version_summary">数据库版本 %s</string>
   <string name="pref_bin_version_title_loading">正在获取 su 程序版本</string>
   <string name="pref_bin_version_title">su 程序版本 %s</string>
   <string name="pref_bin_version_summary">点击检查更新</string>
+  <string name="pref_outdated_notification_title">过时的二进制包提醒</string>
+  <string name="pref_outdated_notification_summary_on">当二进制包过时时显示通知</string>
+  <string name="pref_outdated_notification_summary_off">当二进制包过时时不显示通知</string>
+  <string name="pref_advanced_prompt_title">使用高级提示</string>
+  <string name="pref_advanced_prompt_summary_on">在请求提示中不显示警告</string>
+  <string name="pref_advanced_prompt_summary_off">在请求提示中显示警告</string>
   <string name="pref_changelog_title">更新日志</string>
   <string name="pref_changelog_summary">显示更新日志</string>
   <string name="pref_get_elite_title">获取精英版！</string>
