PT-BR: Missing translations
Change-Id: I7328daa4b8b93a0b9b8f5c1adea6e6218c3693c9

--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -213,4 +213,7 @@
     <item quantity="one">O seguinte pacote parece ser perigoso:</item>
     <item quantity="other">Os seguintes pacotes parecem ser perigosos:</item>
   </plurals>
+  <string name="use_global_settings">Usar configurações global</string>
+  <string name="notifications_enabled">Notificações ativadas</string>
+  <string name="logging_enabled">Log ativado</string>
 </resources>
