--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -184,4 +184,33 @@
     <item quantity="one">Poniższy pakiet został uznany za złośliwy:</item>
     <item quantity="other">Poniższe pakiety zostały uznane za złośliwe:</item>
   </plurals>
+
+    <string name="use_global_settings">Use global settings</string>
+    <string name="notifications_enabled">Notifications enabled</string>
+    <string name="logging_enabled">Logging enabled</string>
+    <string name="request_message">%1$s is requesting Superuser access.\n\nWarning: If you did not initiate this action, or if you do not understand this request, it\'s generally a good idea to deny it.</string>
+    <string name="request_more_info">Tap for more info</string>
+    <string name="request_less_info">Tap for less info</string>
+    <string name="pref_category_backup_restore_title">Backup/Restore</string>
+    <string name="pref_backup_title">Backup apps/preferences</string>
+    <string name="backup_complete">Backup written to sdcard</string>
+    <string name="pref_restore_title">Restore apps/preferences</string>
+    <string name="restore_complete_prefs_only">Preferences restored</string>
+    <string name="pref_category_info_title">General</string>
+    <string name="pref_outdated_notification_title">Outdated binary notification</string>
+    <string name="pref_outdated_notification_summary_on">Show notification when binary is outdated</string>
+    <string name="pref_outdated_notification_summary_off">Do not show notification when binary is outdated</string>
+    <string name="pref_advanced_prompt_title">Use advanced prompt</string>
+    <string name="pref_advanced_prompt_summary_on">Do not show warning on request prompts</string>
+    <string name="pref_advanced_prompt_summary_off">Show warning on request prompts</string>
+    <string name="updater_not_found">not found</string>
+    <string name="updater_no_conn">Failed to download manifest. Check internet connection</string>
+    <string name="updater_step_find_busybox">Checking for busybox...\u0020</string>
+    <string name="updater_bad_install_location_explained">This updater is incapable of updating your su binary since it is installed in /sbin. This is not an error in the updater, it is an error on the behalf of your ROM or kernel developer. You can continue to use Superuser with your outdated binary.</string>
+    <string name="updater_failed_remount">This updater cannot update the su binary on phones that have some kind of write protection on the system partition like S-ON. You can continue to use Superuser with your outdated binary, or update su with ROM Manager.</string>
+    <string name="page_label_apps">apps</string>
+    <string name="page_label_log">log</string>
+    <string name="loading">loading</string>
+    <string name="root_disabled_title">Enable root access?</string>
+    <string name="root_disabled_summary">Root access is currently disabled for all applications by a system setting. Would you like to enable it?</string>
 </resources>
