Improve Spanish Translation-Superuser-CM10
Change-Id: Id02add708967034ee97c64cd17ae94dd4ebef310

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -7,8 +7,8 @@
   <string name="description_log">Registro</string>
   <string name="description_preferences">Preferencias</string>
   <string name="description_extras">Extras</string>
-  <string name="page_label_info">info</string>
-  <string name="page_label_apps">aplicaciones</string>
+  <string name="page_label_info">Info</string>
+  <string name="page_label_apps">Aplicaciones</string>
   <string name="page_label_log">Registro</string>
   <string name="menu_extras">Extras</string>
   <string name="menu_preferences">Preferencias</string>
@@ -55,23 +55,23 @@
   <string name="detail_request">UID solicitada</string>
   <string name="detail_command">Comando</string>
   <string name="detail_status">Estado</string>
-  <string name="info_display_changelog">pulse para mostrar el registro de cambios</string>
-  <string name="info_elite_installed">elite instalado</string>
-  <string name="info_elite_not_installed">elite no instalado</string>
-  <string name="info_get_elite">obtener elite</string>
-  <string name="info_check_updates">pulsa para buscar actualizaciones</string>
-  <string name="info_outdated_binary_notification">notificación de binario desactualizado</string>
-  <string name="info_temp_unroot">unroot temporal</string>
-  <string name="info_temp_unroot_unsuccessful">unroot temporal no conseguido</string>
-  <string name="info_ota_survival">supervivencia ota</string>
-  <string name="info_ota_survival_warning">nota: estas opciones no están garantizadas y no funcionarán en todos los dispositivos</string>
-  <string name="info_version_loading">cargando versión de Superusuario</string>
+  <string name="info_display_changelog">Pulse para mostrar el registro de cambios</string>
+  <string name="info_elite_installed">Version elite comprado</string>
+  <string name="info_elite_not_installed">Version elite no comprado</string>
+  <string name="info_get_elite">Comprar versión elite</string>
+  <string name="info_check_updates">Pulsa para buscar actualizaciones</string>
+  <string name="info_outdated_binary_notification">Notificación de binario desactualizado</string>
+  <string name="info_temp_unroot">Unroot temporal</string>
+  <string name="info_temp_unroot_unsuccessful">Unroot temporal no conseguido</string>
+  <string name="info_ota_survival">Supervivencia vía ota</string>
+  <string name="info_ota_survival_warning">Nota: estas opciones no están garantizadas y no funcionarán en todos los dispositivos</string>
+  <string name="info_version_loading">Cargando versión de Superusuario</string>
   <string name="info_version">superuser v%1$s (%2$d)</string>
   <string name="info_bin_version_loading">Cargando versión de su binario</string>
   <string name="info_bin_version">binario su v%1$s (%2$d)</string>
-  <string name="info_bin_version_not_found">binario su no encontrado</string>
-  <string name="info_check_for_updates">pulsa para buscar actualizaciones</string>
-  <string name="info_outdated_notification">notificación de binario desactualizado</string>
+  <string name="info_bin_version_not_found">Binario su no encontrado</string>
+  <string name="info_check_for_updates">Pulsa para buscar actualizaciones</string>
+  <string name="info_outdated_notification">Notificación de binario desactualizado</string>
   <string name="info_changelog_summary">Mostrar el registro de cambios</string>
   <string name="use_global_settings">Usar ajustes globales</string>
   <string name="notifications_enabled">\u0020\u0020\u0020\u0020 Notificaciones activadas</string>
